@@ -1,0 +1,11 @@
+#######################################################
+# Option HSO device
+
+DefaultVendor=  0x0af0
+DefaultProduct= 0x8300
+
+TargetClass=    0xff
+
+CheckSuccess=10
+
+MessageContent="55534243785634120100000080000601000000000000000000000000000000"
