@@ -1,0 +1,13 @@
+########################################################
+# Olivetti Olicard 100 and others
+
+DefaultVendor= 0x0b3c
+DefaultProduct=0xc700
+
+TargetVendor=  0x0b3c
+TargetProductList="c000,c001,c002"
+
+MessageContent="5553424312345678000000000000061b000000030000000000000000000000"
+NeedResponse=1
+CheckSuccess=20
+
