@@ -1,15 +1,13 @@
 ########################################################
-# Vodafone (ZTE) K3570-Z
+# LG L-05A
 
-DefaultVendor= 0x19d2
-DefaultProduct=0x1007
+DefaultVendor= 0x1004
+DefaultProduct=0x613a
 
-TargetVendor=  0x19d2
-TargetProduct= 0x1008
+TargetVendor=  0x1004
+TargetProduct= 0x6124
 
 MessageContent="5553424312345678000000000000061b000000020000000000000000000000"
-
 NeedResponse=1
-
 CheckSuccess=20
 
