@@ -7,6 +7,7 @@ DefaultProduct=0x0026
 TargetVendor=  0x19d2
 TargetProduct= 0x0094
 
+MessageContent="5553424312345678000000000000061b000000020000000000000000000000"
+NeedResponse=1
 CheckSuccess=20
 
-MessageContent="5553424312345678000000000000061b000000030000000000000000000000"
