@@ -2,13 +2,12 @@
 # ZTE MF110 (Variant)
 
 DefaultVendor= 0x19d2
-DefaultProduct=0x0053
+DefaultProduct=0x0083
 
 TargetVendor=  0x19d2
-TargetProduct= 0x0031
+TargetProduct= 0x0124
 
 MessageContent="5553424312345678000000000000061b000000020000000000000000000000"
-MessageContent2="55534243876543212000000080000c85010101180101010101000000000000"
 
 NeedResponse=1
 
