@@ -7,6 +7,9 @@ DefaultProduct=0x0101
 TargetVendor=  0x19d2
 TargetProduct= 0x0104
 
+MessageContent="5553424312345678000000000000061b000000020000000000000000000000"
+
+NeedResponse=1
+
 CheckSuccess=20
 
-MessageContent="5553424312345678000000000000061b000000020000000000000000000000"
