@@ -12,6 +12,9 @@ DefaultProduct=0x1001
 TargetVendor=  0x19d2
 TargetProduct= 0x1003
 
+MessageContent="5553424312345678000000000000061b000000020000000000000000000000"
+
+NeedResponse=1
+
 CheckSuccess=20
 
-MessageContent="5553424312345678000000000000061b000000020000000000000000000000"
