@@ -7,6 +7,7 @@ DefaultProduct=0xfff6
 TargetVendor=  0x19d2
 TargetProduct= 0xfff1
 
+MessageContent="5553424312345678c00000008000069f030000000000000000000000000000"
+
 CheckSuccess=20
 
-MessageContent="5553424312345678c00000008000069f030000000000000000000000000000"
