@@ -1,0 +1,16 @@
+########################################################
+# BandRich BandLuxe C170, BandLuxe C270
+
+DefaultVendor= 0x1a8d
+DefaultProduct=0x1000
+
+TargetVendor=  0x1a8d
+TargetProduct= 0x1009
+
+MessageContent="5553424312345678000000000000061e000000000000000000000000000000"
+MessageContent2="5553424312345679000000000000061b000000020000000000000000000000"
+
+NeedResponse=1
+
+CheckSuccess=20
+
